# LibTorchFramework

./: .gitignore  LibTorchFramework.sln
LibTorchFramework/: LibTorchFramework.vcxproj  LibTorchFramework.vcxproj.filters  Libtorch.natvis  PerformanceSettings.cpp  PerformanceSettings.h  Settings.h  main.cpp
LibTorchFramework/CustomScenarios/LLMs/: setup_llama.cpp  setup_llama.h  smoke_tests.cpp  smoke_tests.h
LibTorchFramework/CustomScenarios/MrmsDatasetTraining/: MrmsInputLoader.cpp  MrmsInputLoader.h  MrmsLoss.cpp  MrmsLoss.h  setup.cpp  setup_mrms.cpp  setup_mrms.h
LibTorchFramework/CustomScenarios/SDVAE/: setup_sdvae.cpp  setup_sdvae.h
LibTorchFramework/CustomScenarios/U2NetTraining/: setup_u2net.cpp  setup_u2net.h
LibTorchFramework/CustomScenarios/UNetTraining/: setup_unet.cpp  setup_unet.h
LibTorchFramework/CustomScenarios/_tests_/: llm_smoke_tests.cpp  llm_smoke_tests.h  optimizers_tests.cpp  optimizers_tests.h  tokenizer_tests.cpp  tokenizer_tests.h
LibTorchFramework/CustomScenarios/exPreCastTraining/: MeteonetInputLoader.cpp  MeteonetInputLoader.h  setup_exprecast.cpp  setup_exprecast.h
LibTorchFramework/InputProcessing/: DataLoaderData.h  DefaultDataset.cpp  DefaultDataset.h  InputLoader.cpp  InputLoader.h  InputLoadersWrapper.cpp  InputLoadersWrapper.h
LibTorchFramework/InputProcessing/InputLoaders/: EncoderDecoderInputLoader.cpp  EncoderDecoderInputLoader.h  SegmentationInputLoader.cpp  SegmentationInputLoader.h  TextFilesInputLoader.cpp  TextFilesInputLoader.h  VideoSequenceInputLoader.cpp  VideoSequenceInputLoader.h
LibTorchFramework/ModelZoo/LLMs/: LLamaSafeTensorLoader.cpp  LLamaSafeTensorLoader.h  llama.cpp  llama.h
LibTorchFramework/ModelZoo/ResNet/: ResNetModel.cpp  ResNetModel.h
LibTorchFramework/ModelZoo/SDVAE/: SDVAEModel.cpp  SDVAEModel.h  attention.cpp  attention.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h
LibTorchFramework/ModelZoo/SimVPv2/: SimVPv2Model.cpp  SimVPv2Model.h  modules.cpp  modules.h
LibTorchFramework/ModelZoo/U2Net/: U2NetModel.cpp  U2NetModel.h
LibTorchFramework/ModelZoo/UNet/: UNetModel.cpp  UNetModel.h
LibTorchFramework/ModelZoo/exPreCast/: BasicLayerSkip.cpp  BasicLayerSkip.h  CubicDualUpsample.cpp  CubicDualUpsample.h  PatchEmbed3D.cpp  PatchEmbed3D.h  PatchExpanding3D.cpp  PatchExpanding3D.h  PatchMerging.cpp  PatchMerging.h  PixelShuffle3D.cpp  PixelShuffle3D.h  SwinTransformerBlock3D.cpp  SwinTransformerBlock3D.h  WindowAttention3D.cpp  WindowAttention3D.h  WindowUtils.cpp  WindowUtils.h  exPreCastModel.cpp  exPreCastModel.h
LibTorchFramework/Utils/: HelperMacros.h  ModelInfo.cpp  ModelInfo.h  ProgressBar.cpp  ProgressBar.h  TorchImageUtils.cpp  TorchImageUtils.h  TorchUtils.cpp  TorchUtils.h  TrainingHelper.cpp  TrainingHelper.h
LibTorchFramework/core/: AbstractModel.cpp  AbstractModel.h  CudaGraphHelper.cpp  CudaGraphHelper.h  Runner.cpp  Runner.h  Structures.h  Trainer.cpp  Trainer.h
LibTorchFramework/core/Metrics/: MetricsDefault.cpp  MetricsDefault.h  MetricsImage.cpp  MetricsImage.h  PredictionEvaluators.h
LibTorchFramework/core/Modules/: ChangableModule.h  DownSample2d.h  DropPath.cpp  DropPath.h  Embedding.cpp  Embedding.h  Linear.cpp  Linear.h  LoRALinear.cpp  LoRALinear.h  MLP.cpp  MLP.h  ModulesOptions.h  ResNetBlock.h  UpSample2d.h  gradscaler.hpp
LibTorchFramework/core/Modules/Convolutions/: ConvGRU.cpp  ConvGRU.h  CoordConv.cpp  CoordConv.h  DeformConv.cpp  DeformConv.h
LibTorchFramework/core/Modules/Convolutions/DeformConvImpl/: cuda_helpers.h  deform_conv2d.cpp  deform_conv2d.h  deform_conv2d_kernel.cpp  deform_conv2d_kernel.cu  deform_conv2d_kernel_autocast.cpp  deform_conv2d_kernel_autograd.cpp
LibTorchFramework/core/Modules/LossFunctions/: DiceLoss.h  FACL.cpp  FACL.h  FocalFrequencyLoss.cpp  FocalFrequencyLoss.h  MultiBceLoss.h  SSIMLoss.cpp  SSIMLoss.h
LibTorchFramework/core/Modules/WeightsInit/: TruncatedNormalInit.cpp  TruncatedNormalInit.h
LibTorchFramework/core/Optimizers/: AdamW8bit.cpp  AdamW8bit.h  FusedAdamW8bit.cpp  FusedAdamW8bit.h  FusedAdamW8bit_cuda.cu  FusedAdamW8bit_cuda.h  LAMB.cpp  LAMB.h
LibTorchFramework/core/Snapshot/: FreezeInfo.h  PretrainedManager.cpp  PretrainedManager.h  SafeTensorLoader.cpp  SafeTensorLoader.h  SnapshotLoader.cpp  SnapshotLoader.h  SnapshotSaver.cpp  SnapshotSaver.h  safetensors.cpp  safetensors.h
LibTorchFramework/core/Tokenizers/: TokenizerBPE.cpp  TokenizerBPE.h  TokenizerJsonLoader.cpp  TokenizerJsonLoader.h  Tokenizers.h
LibTorchFramework/core/Tokenizers/Strings/: UnicodeRegex.cpp  UnicodeRegex.h  UnicodeStringUtils.h
install/libtorch/: CMakeLists.txt  CMakeSettings.json  DownloadLibTorch.cmake  MakeBuildDebug.bat  MakeBuildRelease.bat
install/torchvision/: CMakeLists.txt
test_data/: res_tokenizer_gemma.json  res_tokenizer_llama3.2.json
